--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -1,7 +1,7 @@
-<% if user_signed_in? %>
-  Logged in as <strong><%= current_user.email %></strong>.
-  <%= link_to "Settings", edit_user_registration_path %> |
-  <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-<% end %>
-<h1>Chat#index</h1>
-<p>Find me in app/views/chat/index.html.erb</p>
+    Logged in as <strong><%= current_user.name %></strong>.
+    <%= link_to "Settings", edit_user_registration_path %> |
+    <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+
+    <% @tmp.each do |room| %>
+        <p><%= room.room_name %></p>
+    <% end %>
