--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,11 @@
       <%= link_to "Logout", destroy_user_session_path, method: :delete %>
 
       <% @rooms.each do |room| %>
-          <p><%= room.room_name %> <%= room.room_id %></p>
+          <% if room.room_id == @room_id %>
+            <h2><%= room.room_name %> <%= room.room_id %></h2>
+          <% else %>
+            <p><%= room.room_name %> <%= room.room_id %></p>
+          <% end %>
       <% end %>
     <% end %>
 
