show text and user

--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -1,5 +1,5 @@
 <ul>
 <% @messages.each do |message| %>
-    <li><%= message.text %></li>
+    <li><%= message.text %> <%= message.name %></li>
 <% end %>
 </ul>
