modify show controller

--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -1,3 +1,4 @@
+<p> now you are in room <%= @room.room_name %> </p>
 <ul>
 <% @messages.each do |message| %>
     <li><%= message.text %> <%= message.name %></li>
