check params in create room action

--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div style = 'display:none'>
     <div>you are in room</div>
     <div id = 'room_id'><%= @room.room_id %></div>
     <div>your id</div>
