--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,18 +15,21 @@
     <p class = 'alert'><%= alert %></p>
 
     <% if user_signed_in? %>
-      Logged in as <strong><%= current_user.name %></strong>.
+      <a href = <%= '/' %>>Home</a> | 
       <%= link_to "Settings", edit_user_registration_path %> |
       <%= link_to "Logout", destroy_user_session_path, method: :delete %>
 
-      <a href = <%= '/' %>>HOME</a>
-      <% @rooms.each do |room| %>
-          <% if room.room_id == @room.room_id %>
-            <h2><%= room.room_name %></h2>
-          <% else %>
-            <p><a href = <%= '/room/' + room.room_id %>><%= room.room_name %></a></p>
-          <% end %>
-      <% end %>
+      Logged in as <strong><%= current_user.name %></strong>.
+      
+      <div class = 'roomMenu'>
+        <% @rooms.each do |room| %>
+            <% if room.room_id == @room.room_id %>
+              <h2><%= room.room_name %></h2>
+            <% else %>
+              <p><a href = <%= '/room/' + room.room_id %>><%= room.room_name %></a></p>
+            <% end %>
+        <% end %>
+      </div>
     <% end %>
 
     <a href = '/add'>Add New Room</a>
