modify add room page ui

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,5 @@
+@import "bootstrap"; 
+
 body{
     background-color: rgb(41, 41, 41);
 }
@@ -13,15 +15,12 @@ body{
 
 .chat{
     float:right;
-    margin-top: 2%;
     margin-bottom: 8%;
     margin-right:2%;
     width:75%;
 
 }
 
-.messages{
-}
 
 a {
     text-decoration: none;
@@ -57,11 +56,11 @@ a {
     position: fixed;
     width:20%;
     height:100%;
-    background-color: rgb(63, 63, 63);
+    background-color: rgb(98, 98, 98);
 }
 
 .menu{
-    background-color: white;
+    background-color: rgb(221, 221, 221);
     padding:5px;
 }
 
@@ -86,6 +85,32 @@ a {
 .addRoomButton{
     float:right;
     margin-right:10px;
+}
+
+.addroom{
+    margin:auto;
+    width:80%;
+}
+
+.joinroom{
+    background-color: rgb(230, 230, 230);
+    width:40%;
+    text-align:center;
+    border-radius: 10px;
+    padding:20px;
+    margin:10px;
+    float:left;
+}
+
+.createroom{
+
+    background-color: rgb(230, 230, 230);
+    width:40%;
+    text-align:center;
+    border-radius: 10px;
+    padding:20px;
+    margin:10px;
+    float:left;
 }
 
 .input{
