--- a/app/views/chat/addRoom.html.erb
+++ b/app/views/chat/addRoom.html.erb
@@ -31,5 +31,6 @@
             <button type="submit" class="btn btn-primary">Enter Room</button>
         <% end %>
     </div>
+    <a href="/" class="btn btn-secondary" role="button" style = "width:30%;"><-Back</a>
 </div>
 
