--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -13,5 +13,5 @@
                 </div>
               </a>
         <% end %>
-        <a href = '/add' class = 'addRoomButton'>Add New Room</a>
+        <a href = '/add' class = 'addRoomButton'>+Add New Room</a>
       </div>
