--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -19,7 +19,7 @@
               </a>
             <% end %>
         <% end %>
-        <a href = '/add' class = 'addRoomButton'>Add New Room</a>
+        <a href = '/add' class = 'addRoomButton'>+Add New Room</a>
       </div>
 
 <div style = 'display:none'>
